syntax = "proto3";

service CaseSummaryService {
    rpc getCustomerCasesSummaryByStage(CasesStageRequest) returns (CaseSummaryList) {}
    rpc getCaseCountByBusinessPartner(CaseCountRequest) returns (CaseCountResponse) {}
    rpc getCaseStatisticsByBusinessPartner(CaseStatisticsRequest) returns (CaseStatisticsResponse) {}
}

message CaseSummary {
    CustomerCase customerCase = 1;
    string firstName = 2;
    string lastName = 3;
    Plan plan = 4;
    VitalDataResponse vitals = 5;
    SummaryDataResponse summary = 6;
    int32 alerts = 7;
    string lastAlertMessage = 8;
    bool isPinned = 9;
    Customer customer = 10;
    string lastIngestedTime = 11;
    bool isLive = 12;
    bool unreadMessages = 13;
    map<string, Alarm> alarms = 14;
    string bedno = 15;
    Doctor doctor = 16;
    LayoutOccupancy layoutOccupancy = 17;
    string uhid = 18;
    BatteryStatus batterystatus = 19;
    string ecgEventsCount = 20;
    string liveStreamingStartTime = 21;
    CaseLocalAlarms localAlarms = 22;
}

message CaseLocalAlarms {
   map<string, Alarm> vitals = 1;
   map<string, Settings> settings = 2;
   string lastUpdatedBy = 3;
}

message Settings {
   optional double ecgGain=1;
   optional double measuringFrequency=2;
   optional string isMeasuringFrequencyOn=3;
   string monitoringType = 4;
   repeated Time monitoringTimes = 5;
   MonitoringFrequency monitoringFrequency = 6;
}

message BatteryStatus {
   string customerCase = 1;
   string name = 2;
   string patchId = 3;
   string valueType = 4;
   string value = 5;
   string percentage = 6;
}
message CustomerCase {
    string id = 1;
    string caseNumber = 2;
}

message Plan {
    string id = 1;
    Package package = 2;
    Condtion condition = 3;
}

message Package {
    string id = 1;
    string name = 2;
}

message Condtion {
    string id = 1;
    string name = 2;
}

message CaseSummaryList {
    repeated CaseSummary patientCases = 1;
    HsiCounts hsiCounts = 2;
    int32 count = 3;
    int32 pages = 4;
}

message Empty {}

message CasesStageRequest {
    string page = 1;
    string perPage = 2;
    string stage = 3;
    int32 hsiScore = 4;
    string platformPartner = 5;
    string business = 6;
    string doctor = 7;
    string condition = 8;
    bool onlyClinicalAlerts = 9;
    repeated string pinnedCases = 10;
    string query = 11;
    repeated LayoutFilter layout = 12;
    string caseNumber = 13;
    repeated string businessList = 14;
    repeated string doctorsList = 15;
    repeated string daysOfMonitoring = 16;
    string lastIngestion = 17;
    string offBoarding = 18;
    string ecgEvents = 19;
    string serviceEnablerId = 20;
    string businessPartnerId = 21;
}

message HSICountRequest {
    string stage = 1;
    string platformPartner = 2;
    string business = 3;
    string doctor = 4;
    string condition = 5;
}

message SummaryDataResponse {
   Data vitals = 1;
   Data ecg = 2;
   Data symptoms = 3;
   int32 maxScore = 4;
   string timeStamp = 5;
}

message Data {
   int32 score = 1;
   string status = 2;
}

message VitalDataResponse {
   VitalData ECG = 1;
   VitalData RR = 2;
   VitalData HR = 3;
   VitalData BP = 4;
   VitalData TEMP = 5;
   VitalData SPO2 = 6;
   VitalData ATEMP = 7;
}

message VitalData {
   Vital vital = 1;
   string status = 2;
   double value = 3;
   repeated double values = 4;
   string timeStamp = 5;
   Analysis analysis = 6;
   string lastIngestedTime = 7;
   bool isLive = 8;
}

message Analysis {
   int32 score = 1;
   string group = 2;
   string ecgCondition = 3;
}

message Vital {
   string code = 1;
   string name = 2;
}

message SymptomCheckerDataResponse {
   string status = 1;
   BodySystemAnalysis analysis = 2; 
   repeated BodySystems bodySystems = 3;
   string timeStamp = 4;
}

message BodySystems {
   BodySystem bodySystem = 1;
   int32 score = 2;
}

message BodySystem {
   string id = 1;
   string name = 2;  
   string code = 3;
}

message BodySystemAnalysis {
   int32 score = 1;
}

message HsiCounts {
    int32 LIVE = 1;
    int32 RED = 2;
    int32 GREEN = 3;
    int32 YELLOW = 4;
    int32 AMBER = 5;
    int32 GREY = 6;
}

message Customer {
   string id = 1;
   Mobile mobile = 2;
   string email = 3;
   string firstName = 4;
   string lastName = 5;
   string gender = 6;
   string dob = 7;
   int32 age = 15;
   string patientId = 16;
}

message Mobile {
   string number = 1;
   string countryCode = 2;
}

message LayoutFilter {
   string layoutName = 1;
   repeated string layoutValues = 2;
}

message Alarm {
   string type = 1;
   AlarmValue value = 2;
}

message AlarmValue {
   optional double min = 1;
   optional double max = 2;
   optional double val = 3;
   optional AlarmValue systolic = 4;
   optional AlarmValue diastolic = 5;
}

message Doctor {
   string id = 1;
   string firstName = 2;
   string lastName = 3;
}

message CaseCountRequest {
   string doctor = 1;
   string platformPartner = 2;
}

message CaseCountResponse {
   map<string, int32> caseCounts = 1;
}

message LayoutOccupancy {
   string businessId = 1;
   repeated Layout layout = 2;
}

message Layout {
   string layoutName = 1;
   string layoutValue = 2;
}

message Time {
   int32 hour = 1;
   int32 min = 2;
   string ampm = 3;
}

message MonitoringFrequency {
   int32 duration=1;
   string durationUnits=2;
   int32 periodicity=3;
   string periodicityUnits=4;
}

message CaseStatisticsRequest {
   string serviceEnablerId = 1;
   string from = 2;
}

message Business {
   string id = 1;
   string name = 2;
}

message CaseStatisticsResponse {
   Business serviceEnabler = 1;
   int32 total = 2;
   int32 open = 3;
   int32 inProgress = 4;
   int32 completed = 5;
   repeated ProviderStats providerStats = 6;
}

message ProviderStats {
   Business business = 1;
   int32 total = 2;
   int32 open = 3;
   int32 inProgress = 4;
   int32 completed = 5;
}